[tool.poetry]
name = "playlist-by-language"
version = "0.1.0"
description = "An application for creating Spotify playlists based on the languages in the user's liked songs."
authors = ["Antony Nyagah <tony.m.nyagah@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "playlist_by_language"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
